2000-06-23  Gerd Moellmann  <gerd@gnu.org>

	* cus-edit.el (custom-button-face, custom-button-pressed-face): 
	Specify foreground color.

	* faces.el (tool-bar, mode-line, header-line): Specify foreground
	color.

	* Makefile.in (DONTCOMPILE): Add eshell/esh-maint.el.

	* eshell/esh-cmd.el (eshell-rewrite-for-command): Use cdr and
	cddr instead of cdddr.

	* eshell/esh-util.el (eshell-sublist): Use eshell-copy-list
	instead of copy-list.

	* eshell/esh-mode.el (eshell-mode): Use eshell-copy-list instead
	of copy-list.

	* subdirs.el: Add eshell subdirectory.

	* eshell: New subdirectory containing the Eshell package.

	* pcomplete.el: New file.

2000-06-22  Eli Zaretskii  <eliz@is.elta.co.il>

	* files.el (make-backup-file-name-1): On DOS/Windows, run the
	backup file name through convert-standard-filename.

	* dos-fns.el (convert-standard-filename): Convert leading
	directories as well.  When long file names are supported, convert
	characters that are invalid in Windows file names.

2000-06-22  Vinicius Jose Latorre  <vinicius@cpqd.com.br>

	* ps-print.el: Fix bug: if ^L is the very first buffer character,
	ps-print crashes.  New feature: page selection for printing.  Create
	raw-text-unix coding system for XEmacs.  Doc fix.
	(ps-print-version): New version number (5.2.3).
	(ps-plot-region): Bug fix.
	(ps-setup, ps-init-output-queue, ps-output, ps-begin-job, ps-end-file)
	(ps-header-sheet, ps-generate, ps-end-job): Code fix.
	(ps-restore-selected-pages, ps-selected-pages, ps-print-page-p): New
	funs.
	(ps-selected-pages, ps-last-selected-pages, ps-first-page)
	(ps-last-page): New vars.

2000-06-21  Gerd Moellmann  <gerd@gnu.org>

	* progmodes/sh-script.el (sh-while-getopts): Fix handling of
	empty option string.

2000-06-21  Eli Zaretskii  <eliz@is.elta.co.il>

	* man.el (man): Doc fix.

2000-06-21  Kenichi Handa  <handa@etl.go.jp>

	* international/mule-cmds.el (set-language-info-alist): Docstring
	fixed.

2000-06-20  Gerd Moellmann  <gerd@gnu.org>
